...
  const closeEvolutionModal = () => {
    setIsEvolutionModalVisible(false);
  };

  return (
    <Container noPadding testID="settings-page">
      <Header title="설정" />
      <ScrollView
        contentContainerStyle={styles.scrollContent}
        showsVerticalScrollIndicator={SHOW_SCROLL_INDICATOR}
        testID="settings-scroll-view"
      >
        <View testID="settings-profile" style={styles.profileSection}>
          <View style={styles.profileRow}>
            <View
              accessibilityLabel="프로필 이미지"
              testID="settings-profile-avatar"
              style={styles.avatar}
            >
...
              로그아웃
            </Typography>
          </Pressable>
          <Pressable
            accessibilityRole="button"
            onPress={() => router.push('/beta-feedback')}
            testID="settings-menu-item-베타 피드백"
            style={styles.menuItem}
          >
            <Typography
              color={palette.theme.red[50]}
              testID="settings-menu-text-베타 피드백"
              variant="body2"
...
            accessibilityRole="button"
            onPress={() => router.push('/delete-account')}
            style={styles.accountDeletionButton}
          >
            <Typography
              color={palette.theme.gray[30]}
              testID="settings-account-deletion-text"
              variant="body3"
              weight="regular"
            >
              회원 탈퇴
            </Typography>
          </Pressable>
...
