...
          ),
        }}
      />
      <Tabs.Screen
        name="(afterLogin)/my-info"
        options={{
          title: 'My',
          tabBarIcon: ({ color }) => (
            <TabBarIcon icon={TAB_BAR_ICONS.settings} color={color} />
          ),
        }}
      />
    </Tabs>
...
